# aasdk

./: CMakeLists.txt
.github/workflows/: cmake.yml
aasdk_proto/: AudioTypeEnum.proto  ButtonCodeEnum.proto  CMakeLists.txt  ChannelDescriptorData.proto  NavigationChannelData.proto  NavigationChannelMessageIdsEnum.proto  NavigationDistanceMessage.proto  NavigationDistanceUnitEnum.proto  NavigationFocusRequestMessage.proto  NavigationFocusResponseMessage.proto  NavigationFocusTypeEnum.proto  NavigationRequestMessage.proto  NavigationRequestStateEnum.proto  NavigationTurnEventEnum.proto  NavigationTurnMessage.proto  NavigationTurnSideEnum.proto  NavigationTypeEnum.proto  PhoneStateEnum.proto  PhoneStatusChannelData.proto  PhoneStatusChannelMessageIdsEnum.proto  PhoneStatusIndicationMessage.proto  WifiSecurityResponseMessage.proto
cmake_modules/: ExternalGtest.cmake
include/aasdk/Channel/: Promise.hpp  ServiceChannel.hpp
include/aasdk/Channel/AV/: AVInputServiceChannel.hpp  AudioServiceChannel.hpp  IAVInputServiceChannel.hpp  IAVInputServiceChannelEventHandler.hpp  IAudioServiceChannel.hpp  IAudioServiceChannelEventHandler.hpp  IVideoServiceChannel.hpp  IVideoServiceChannelEventHandler.hpp  MediaAudioServiceChannel.hpp  SpeechAudioServiceChannel.hpp  SystemAudioServiceChannel.hpp  VideoServiceChannel.hpp
include/aasdk/Channel/Bluetooth/: BluetoothServiceChannel.hpp  IBluetoothServiceChannel.hpp  IBluetoothServiceChannelEventHandler.hpp
include/aasdk/Channel/Control/: ControlServiceChannel.hpp  IControlServiceChannel.hpp  IControlServiceChannelEventHandler.hpp
include/aasdk/Channel/Input/: IInputServiceChannel.hpp  IInputServiceChannelEventHandler.hpp  InputServiceChannel.hpp
include/aasdk/Channel/Navigation/: INavigationChannel.hpp  INavigationChannelEventHandler.hpp  NavigationChannel.hpp
include/aasdk/Channel/PhoneStatus/: IPhoneStatusServiceChannel.hpp  IPhoneStatusServiceChannelEventHandler.hpp  PhoneStatusServiceChannel.hpp
include/aasdk/Channel/Sensor/: ISensorServiceChannel.hpp  ISensorServiceChannelEventHandler.hpp  SensorServiceChannel.hpp
include/aasdk/Common/: Data.hpp  Log.hpp
include/aasdk/Error/: Error.hpp  ErrorCode.hpp
include/aasdk/IO/: IOContextWrapper.hpp  Promise.hpp
include/aasdk/Messenger/: ChannelId.hpp  EncryptionType.hpp  FrameSizeType.hpp  FrameType.hpp  ICryptor.hpp  IMessageInStream.hpp  IMessageOutStream.hpp  IMessenger.hpp  Message.hpp  MessageInStream.hpp  MessageOutStream.hpp  MessageType.hpp  Messenger.hpp  Promise.hpp  Timestamp.hpp
include/aasdk/TCP/: ITCPEndpoint.hpp  ITCPWrapper.hpp  TCPEndpoint.hpp  TCPWrapper.hpp
include/aasdk/Transport/: ISSLWrapper.hpp  ITransport.hpp  TCPTransport.hpp  Transport.hpp  USBTransport.hpp
include/aasdk/USB/: AOAPDevice.hpp  AccessoryModeProtocolVersionQuery.hpp  AccessoryModeQuery.hpp  AccessoryModeQueryChain.hpp  AccessoryModeQueryChainFactory.hpp  AccessoryModeQueryFactory.hpp  AccessoryModeSendStringQuery.hpp  AccessoryModeStartQuery.hpp  ConnectedAccessoriesEnumerator.hpp  IAOAPDevice.hpp  IAccessoryModeQuery.hpp  IAccessoryModeQueryFactory.hpp  IConnectedAccessoriesEnumerator.hpp  IUSBHub.hpp  IUSBWrapper.hpp  USBEndpoint.hpp  USBHub.hpp
include/f1x/aasdk/Channel/: ServiceChannel.hpp
include/f1x/aasdk/Channel/AV/: AVInputServiceChannel.hpp  AudioServiceChannel.hpp  MediaAudioServiceChannel.hpp  SpeechAudioServiceChannel.hpp  SystemAudioServiceChannel.hpp  VideoServiceChannel.hpp
include/f1x/aasdk/Channel/Bluetooth/: BluetoothServiceChannel.hpp
include/f1x/aasdk/Channel/Control/: ControlServiceChannel.hpp
include/f1x/aasdk/Channel/Input/: InputServiceChannel.hpp
include/f1x/aasdk/Channel/Sensor/: SensorServiceChannel.hpp
include/f1x/aasdk/IO/: IOContextWrapper.hpp  Promise.hpp
include/f1x/aasdk/Messenger/: MessageInStream.hpp  MessageOutStream.hpp  Messenger.hpp
include/f1x/aasdk/TCP/: ITCPEndpoint.hpp  ITCPWrapper.hpp  TCPEndpoint.hpp  TCPWrapper.hpp
include/f1x/aasdk/Transport/: TCPTransport.hpp  Transport.hpp  USBTransport.hpp
include/f1x/aasdk/USB/: AOAPDevice.hpp  AccessoryModeProtocolVersionQuery.hpp  AccessoryModeQuery.hpp  AccessoryModeQueryChain.hpp  AccessoryModeQueryChainFactory.hpp  AccessoryModeQueryFactory.hpp  AccessoryModeSendStringQuery.hpp  AccessoryModeStartQuery.hpp  ConnectedAccessoriesEnumerator.hpp  IAccessoryModeQuery.hpp  IAccessoryModeQueryFactory.hpp  IUSBWrapper.hpp  USBEndpoint.hpp  USBHub.hpp
include_ut/f1x/aasdk/TCP/UT/: TCPWrapper.mock.hpp
src/Channel/: ServiceChannel.cpp
src/Channel/AV/: AVInputServiceChannel.cpp  AudioServiceChannel.cpp  MediaAudioServiceChannel.cpp  SpeechAudioServiceChannel.cpp  SystemAudioServiceChannel.cpp  VideoServiceChannel.cpp
src/Channel/Bluetooth/: BluetoothServiceChannel.cpp
src/Channel/Control/: ControlServiceChannel.cpp
src/Channel/Input/: InputServiceChannel.cpp
src/Channel/Navigation/: NavigationChannel.cpp
src/Channel/PhoneStatus/: PhoneStatusServiceChannel.cpp
src/Channel/Sensor/: SensorServiceChannel.cpp
src/Common/: Data.cpp
src/IO/: IOContextWrapper.cpp
src/Messenger/: ChannelId.cpp  FrameHeader.cpp  FrameSize.cpp  Message.cpp  MessageId.cpp  MessageInStream.cpp  MessageInStream.ut.cpp  MessageOutStream.cpp  MessageOutStream.ut.cpp  Messenger.cpp  Messenger.ut.cpp  Timestamp.cpp
src/TCP/: TCPEndpoint.cpp  TCPEndpoint.ut.cpp  TCPWrapper.cpp
src/Transport/: TCPTransport.cpp  TCPTransport.ut.cpp  Transport.cpp  USBTransport.cpp  USBTransport.ut.cpp
src/USB/: AOAPDevice.cpp  AOAPDevice.ut.cpp  AccessoryModeProtocolVersionQuery.cpp  AccessoryModeProtocolVersionQuery.ut.cpp  AccessoryModeQuery.cpp  AccessoryModeQueryChain.cpp  AccessoryModeQueryChain.ut.cpp  AccessoryModeQueryChainFactory.cpp  AccessoryModeQueryFactory.cpp  AccessoryModeSendStringQuery.cpp  AccessoryModeSendStringQuery.ut.cpp  AccessoryModeStartQuery.cpp  AccessoryModeStartQuery.ut.cpp  ConnectedAccessoriesEnumerator.cpp  ConnectedAccessoriesEnumerator.ut.cpp  USBEndpoint.cpp  USBEndpoint.ut.cpp  USBHub.cpp  USBHub.ut.cpp
unit_test/TCP/UT/: TCPWrapper.mock.hpp
